--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -19,7 +19,9 @@ body {
 }
 
 .container {
-  max-width: 1400px;
+  position: relative;
+  max-width: 1180px;
+  min-width: 320px;
   width: $container-width;
   margin: 0 auto;
   }
