changing axios request to Realtime database to Firestore database

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -2,6 +2,7 @@ $black: #232323;
 $background: rgba(255, 255, 128, .5);
 $gray-line: #f6f6f6;
 $green-logo: #1a9b7b;
+$green-backgroud: #20c99747;
 
 $container-width: 80%;
 
