make form for authentication function for creation users on backend side

--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -61,7 +61,7 @@
       }
     }
           
-    .lang-box {
+    .login-box {
       display: flex;
       flex-direction: column;
       align-items: center;
