made the functionality of resetting the user's password if he forgot it

--- a/src/scss/components/_all.scss
+++ b/src/scss/components/_all.scss
@@ -1,4 +1,5 @@
-@import './header';
-@import './menu';
-@import './main';
-@import './price';
+@import "./header";
+@import "./menu";
+@import "./main";
+@import "./price";
+@import "./firebaseLogin";
