--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,10 +1,10 @@
 @import "~bootstrap/scss/bootstrap";
-@import './variables';
-@import './components/all';
+@import "./variables";
+@import "./components/all";
 
 body {
   font-size: 16px;
-  font-family: 'Nunito', sans-serif;
+  font-family: "Nunito", sans-serif;
   height: 100%;
   padding: 0;
   margin: 0;
@@ -24,4 +24,15 @@ body {
   min-width: 320px;
   width: $container-width;
   margin: 0 auto;
-  }
+}
+.container_narrow {
+  max-width: 500px;
+  min-width: 320px;
+  width: 80%;
+  margin: 0 auto;
+}
+
+form {
+  padding: 20px;
+  background-color: $gray-line;
+}
