--- a/src/scss/components/_main.scss
+++ b/src/scss/components/_main.scss
@@ -1,62 +1,61 @@
-@import '../variables';
+@import "../variables";
 
 .main {
+  section {
+    margin-bottom: 60px;
+  }
 
-    section {
-        margin-bottom: 60px; 
+  .banner_top {
+    width: 100%;
+    height: 551px;
+    overflow: hidden;
+    position: relative;
+    background-repeat: no-repeat;
+    background-image: url("../../../public/img/background_banner.png");
+    background-color: $background;
+    @media (max-width: 1024px) {
+      height: 50%;
+      background-image: url("../../../public/img/background_banner_mobile.png");
     }
 
-    .banner_top {
-        width: 100%;
-        height: 551px;
-        overflow: hidden;
-        position: relative;
-        background-repeat: no-repeat;
-        background-image: url("../../../public/img/background_banner.png");
-        background-color: $background;
-        @media (max-width: 1024px) {
-            height: 50%;
-            background-image: url("../../../public/img/background_banner_mobile.png");
-          }
+    .text-box {
+      margin-top: 20px;
+      max-width: 50%;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      height: 100%;
 
-        .text-box {
-            margin-top: 20px;
-            max-width: 50%;
-            width: 100%;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            height: 100%;
-    
-            h1 {
-                text-align: center;
-                @media (max-width: 660px) {
-                    font-size: 14px;
-                  }
-            }
-            ul {
-                margin-top: 30px;
-                display: flex;
-                justify-content: space-between;
-                margin-bottom: 30px;
-            }
-
+      h1 {
+        text-align: center;
+        @media (max-width: 660px) {
+          font-size: 14px;
         }
+      }
+      ul {
+        margin-top: 30px;
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 30px;
+      }
     }
-    .banner_top::before {
-        position: absolute;
-        background: url("../../../public/img/banner_before.png");
-        top: 0;
-        left: 0;
-        width: 55%;
-        height: 100%;
-        content: "";
-        background-size: 100% 100%;
-    }
+  }
+  .banner_top::before {
+    position: absolute;
+    background: url("../../../public/img/banner_before.png");
+    top: 0;
+    left: 0;
+    width: 55%;
+    height: 100%;
+    content: "";
+    background-size: 100% 100%;
+  }
 
-    .carousel {
-        h3, p {
-            color: $black;
-        }
+  .carousel {
+    h3,
+    p {
+      color: $black;
     }
+  }
 }
