--- a/src/scss/components/_addUser.scss
+++ b/src/scss/components/_addUser.scss
@@ -10,6 +10,10 @@
       flex-direction: column;
     }
 
+    .red_border {
+      border: 1px, solid, red;
+    }
+
     p {
       color: red;
     }
