made page Services

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,8 +1,10 @@
 $black: #232323;
-$background: rgba(255, 255, 128, .5);
+$background: rgba(255, 255, 128, 0.5);
 $gray-line: #f6f6f6;
 $green-logo: #1a9b7b;
-$green-backgroud: #20c99747;
+$green-backgroud: rgba(25, 135, 84, 0.7294117647);
+$green-text: Teal;
+$green-color: AliceBlue;
 
 $container-width: 80%;
 
