--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -62,8 +62,14 @@
     }
 
     .login-box {
+      button {
+        padding: 5px 10px;
+        border: none;
+        border-radius: 5px;
+        background-color: $green-backgroud;
+      }
       span {
-        color: black;
+        color: $green-color;
         font-weight: 700;
       }
     }
