check list of services for order form

--- a/src/scss/components/_personalAccount.scss
+++ b/src/scss/components/_personalAccount.scss
@@ -2,6 +2,10 @@
   display: flex;
 }
 
+.check-services_container {
+  margin-bottom: 20px;
+}
+
 .react-calendar {
   width: 350px;
   max-width: 100%;
