--- a/src/scss/components/_personalAccount.scss
+++ b/src/scss/components/_personalAccount.scss
@@ -4,13 +4,20 @@
 
 .common_container {
   display: flex;
+  @media (max-width: 1024px) {
+    flex-direction: column;
+  }
 }
 
 .operations {
   display: flex;
   flex-direction: column;
+  max-width: 280px;
   button {
     margin-top: 10px;
+  }
+  @media (max-width: 1024px) {
+    margin-bottom: 30px;
   }
 }
 
@@ -18,6 +25,12 @@
   margin-right: 20px;
 }
 
+.information_container {
+  max-width: 600px;
+  margin-top: 20px;
+}
+
+//css for calendar
 .react-calendar {
   width: 350px;
   max-width: 100%;
