split the module PersonalAccount into components

--- a/src/scss/components/_personalAccount.scss
+++ b/src/scss/components/_personalAccount.scss
@@ -1,6 +1,7 @@
 .centre_container {
   display: flex;
   justify-content: center;
+  margin-bottom: 40px;
   .account_container {
     display: inline-flex;
     flex-direction: column;
