--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -40,6 +40,8 @@
       img {
         width: 100px;
         height: 100px;
+        border-radius: 10px;
+        box-shadow: 0 0 10px 0 rgb(0 0 0 / 23%);
       }
     }
 
