--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -1,20 +1,30 @@
 .footer {
+  width: 100%;
   padding-top: 40px;
   background-color: #11829d;
 
   .content {
     display: flex;
     justify-content: space-between;
-    img {
-      max-width: 165px;
-      border-radius: 10px;
-      box-shadow: 0 0px 25px 0 #f8f9fa;
+    @media (max-width: 780px) {
+      flex-direction: column;
+      align-items: center;
+    }
+    .logo_box {
+      img {
+        max-width: 165px;
+        border-radius: 10px;
+        box-shadow: 0 0px 25px 0 #f8f9fa;
+      }
     }
 
     .main_menu {
       max-width: 300px;
       .list-group {
         min-width: 165px;
+        @media (max-width: 780px) {
+          width: 165px;
+        }
       }
 
       button {
@@ -23,6 +33,41 @@
       a {
         color: #232323;
         text-decoration: none;
+      }
+    }
+
+    .contact_box {
+      width: 165px;
+
+      span {
+        font-weight: 700;
+      }
+      p {
+        padding: 0;
+        margin: 0;
+      }
+      .img_box {
+        margin-right: 5px;
+        img {
+          width: 24px;
+        }
+      }
+
+      .telefone_box,
+      .address_box {
+        display: flex;
+        justify-content: center;
+        padding: 5px 0px;
+        border-bottom: solid 1px;
+      }
+      .social_box {
+        display: flex;
+        justify-content: space-between;
+        padding: 5px 0px;
+        border-bottom: solid 1px;
+        img {
+          width: 32px;
+        }
       }
     }
   }
@@ -36,6 +81,6 @@
     height: 48px;
     justify-content: space-between;
     padding: 0;
-    background-color: #0c0863;
+    background-color: #16767b;
   }
 }
