start to work under page Contact, add API to add Google Map on page

--- a/src/scss/components/_personalAccount.scss
+++ b/src/scss/components/_personalAccount.scss
@@ -48,6 +48,13 @@
   }
 }
 
+.offcanvas {
+  a {
+    color: white;
+    text-decoration: none;
+  }
+}
+
 //css for calendar
 .react-calendar {
   width: 350px;
