--- a/src/scss/components/_main.scss
+++ b/src/scss/components/_main.scss
@@ -39,11 +39,54 @@
           font-size: 14px;
         }
       }
-      ul {
-        margin-top: 30px;
+      .slogans {
+        color: black;
+        padding: 0;
+        list-style: none;
+        margin-top: 10px;
         display: flex;
-        justify-content: space-between;
-        margin-bottom: 30px;
+        flex-wrap: wrap;
+        justify-content: stretch;
+        margin-bottom: 10px;
+        li {
+          width: 100%;
+          position: relative;
+          padding: 10px 30px;
+          background: linear-gradient(to left, #adcee9 0%, #fff, #adcee9);
+          border: 2px solid #337ab7;
+          color: #506a6b;
+          box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.2);
+          margin-bottom: 5px;
+          text-align: center;
+          background-size: 100% 100%;
+          z-index: 1;
+
+          @media (max-width: 500px) {
+            padding: 5px 10px;
+          }
+        }
+        li:before {
+          content: "";
+          position: absolute;
+          width: 0;
+          height: 100%;
+          top: 50%;
+          left: 50%;
+          background: linear-gradient(to left, #ebf3fa 0%, #fff, #ebf3fa);
+          opacity: 0;
+          -webkit-transform: translateX(-50%) translateY(-50%);
+          -moz-transform: translateX(-50%) translateY(-50%);
+          -ms-transform: translateX(-50%) translateY(-50%);
+          transform: translateX(-50%) translateY(-50%);
+          -webkit-transition: all 0.3s;
+          -moz-transition: all 0.3s;
+          transition: all 0.3s;
+          z-index: -1;
+        }
+        li:hover:before {
+          width: 100%;
+          opacity: 1;
+        }
       }
     }
   }
