--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -69,6 +69,7 @@
 
     .login-box {
       button {
+        min-width: 140px;
         padding: 10px 15px;
         border: none;
         border-radius: 5px;
